2005-04-05  Raja R Harinath  <rharinath@novell.com>

	* monod.c: Refer to mono/mini/jit.h.

2005-04-04  Joerg Rosenkranz <joergr@voelcker.com>

	* monod.c: First commit: Daemon for running services built 
	with System.ServiceProcess under Linux.